src/scss/04-patterns/04-navigation/_section-index.scss
/*! Patterns - Navigation - Section Index */
////
/// @group Patterns-Section_Index
/// Patterns - Navigation - Section Index

///
.section-index {
	border-left: var(--border-size-s) solid var(--color-neutral-5);
	display: flex;
	flex-direction: column;

	&.is--sticky {
		position: -webkit-sticky; //Fix for older iPhones
		position: sticky;
		top: var(--top-position);
	}

	&-item {
		cursor: pointer;

		&:last-child {
			margin-bottom: var(--space-none);
		}

		&.is--active {
			border-left: var(--border-size-m) solid var(--color-primary);
			color: var(--color-neutral-9);
			font-weight: var(--font-semi-bold);
		}
	}

	a {
		&,
		&:visited {
			border-left: var(--border-size-m) solid transparent;
			color: var(--color-neutral-8);
			margin-bottom: var(--space-s);
			padding-left: var(--space-base);
		}

		&:hover {
			color: var(--color-neutral-9);
		}
	}
}

///
.layout-native {
	.section-index {
		&.is--sticky {
			top: calc(var(--header-size) + var(--header-size-content) + var(--top-position) + var(--os-safe-area-top));
		}
	}
}

// Responsive ---------------------------------------------------------------------------
///
.android[data-status-bar-height] {
	.layout-native {
		.section-index {
			&.is--sticky {
				top: calc(
					var(--header-size) + var(--header-size-content) + var(--top-position) + var(--status-bar-height)
				);
			}
		}
	}
}

///
.ios {
	.layout-native {
		.section-index {
			&.is--sticky {
				position: fixed;
			}
		}
	}
}

///
.edge {
	.section-index {
		&.is--sticky {
			position: fixed;
		}
	}
}

// Accessibility ---------------------------------------------------------------------------
///
.has-accessible-features {
	.section-index {
		a {
			&:focus {
				background-color: transparent;
				box-shadow: 0 0 0 3px var(--color-focus-outer);
			}
		}
	}
}

